# readyhire

readyhire-backend/: .env.example  .gitignore  main.py  pyproject.toml
readyhire-backend/app/: main.py
readyhire-backend/app/config/: settings.py
readyhire-backend/app/models/: response.py
readyhire-backend/app/routers/: analyze.py
readyhire-backend/app/services/: ai_service.py  gemini.py  parser.py  prompts.py
readyhire-backend/app/services/providers/: __init__.py  base_provider.py  gemini_provider.py  openrouter_provider.py
readyhire-backend/app/utils/: helpers.py
readyhire-frontend/: README.md  components.json  package-lock.json  package.json
readyhire-frontend/src/: app.css
readyhire-frontend/src/lib/api/: api.js
readyhire-frontend/src/lib/components/analysis/: ATSKeywords.svelte  MatchScore.svelte  MissingSkills.svelte  SkillsCard.svelte
readyhire-frontend/src/lib/components/layout/: Container.svelte  Footer.svelte  Navbar.svelte
readyhire-frontend/src/lib/components/report/: ChecklistCard.svelte  CoverLetterCard.svelte  DownloadReport.svelte  InterviewCard.svelte  (+1 more)
readyhire-frontend/src/routes/: +page.svelte
readyhire-frontend/src/routes/faqs/: +page.svelte
readyhire-frontend/src/routes/features/: +page.svelte
readyhire-frontend/src/routes/how-it-works/: +page.svelte
readyhire-frontend/src/routes/pricing/: +page.svelte
readyhire-frontend/src/routes/privacy-policy/: +page.svelte
readyhire-frontend/src/routes/terms-of-service/: +page.svelte
readyhire-frontend/static/: pritesh_frontend_engineer_resume.docx
(+3 files in other folders)
